# suseobs-to-mattermost-webhook

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: RELEASE.md
examples/: .env.example  kubernetes-deployment.yaml  webhook-testing.md
spec/: mattermost.md  suse-obs.openapi.yaml  suse-obs.webhook-api.yaml
src/suseobs_mattermost/: app.py  config.py  logging_config.py  main.py  version_info.py
src/suseobs_mattermost/api/: routes.py
src/suseobs_mattermost/middleware/: access_logging.py
src/suseobs_mattermost/models/: __init__.py  normalized.py  webhook.py
src/suseobs_mattermost/services/: batch.py  formatter.py  health.py  mattermost.py  parser.py
tests/: conftest.py  doubles.py  test_api.py  test_batch.py  test_config.py  test_formatter.py  test_integration_webhook.py  test_mattermost.py  test_parser.py  test_version_info.py
