[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suseobs-mattermost-webhook"
version = "0.2.0"
description = "Translates SUSE Observability (StackState) webhooks to Mattermost messages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
